# FluxEngine

./: .clang-tidy  CI-FIXES-ROUND2.md  CMakeLists.txt  FluxBuild.ps1  FluxBuild.sh  LICENSE.txt  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml
docs/: CI-CD.md
docs/api/: Logger.md
docs/architecture/: Architecture.md
docs/architecture/logger/: Logger.md
engine/src/: FluxEngine.h  defines.h  export.h  platformExport.h  types.h
engine/src/core/: engine.cpp  engine.h
engine/src/core/logger/: ScopedLoggerContext.h  logger.cpp  logger.h  loggerContext.h  loggerExtensions.cpp  loggerExtensions.h  loggerScope.h
engine/src/core/logger/formatters/: ConsoleFormatter.cpp  ConsoleFormatter.h  ILogFormatter.h  PlainTextFormatter.cpp  PlainTextFormatter.h
engine/src/core/logger/formatters/mappings/: loggerMappings.h
engine/src/core/logger/types/: loggerColor.h  loggerLevel.h  loggerScope.h
engine/src/logger/: logger.cpp  logger.h
engine/src/platform/: loggerPlatformContext.h  platform.Manager.cpp  platformManager.h
engine/src/platform/windows/logger/: logger.cpp  logger.h
engine/src/platform/windows/logger/data/: consoleContext.h
engine/src/platform/windows/logger/scope/console/: ConsoleScope.cpp  consoleScope.h
sandbox/src/: main.cpp
tests/: test_example.cpp  test_logger.cpp
